# digital-passport-sma

./: .env.example  .gitignore  00_passport_public.json  LICENSE  README.md  digital_passport_мирослав_sma_v_1.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
application/: plugins.py  rb_gates.py  use_cases.py
docs/: ARCHITECTURE.md  diagram.md  openapi.yaml
domain/: entities.py  policies.py  ports.py
infrastructure/: config.py  openai_adapter.py
infrastructure/db/: models.py  repository.py
interfaces/http/: api.py
src/: main.py
src/application/dto/: generation.py
src/application/use_cases/: generate_code.py  get_history.py
src/config/: settings.py
src/domain/models/: code_generation.py  language.py
src/domain/services/: ports.py  postprocessing.py  safety.py  token_policy.py
src/infrastructure/db/: models.py  session.py
src/infrastructure/openai/: client.py
src/infrastructure/plugins/: trim_plugin.py
src/infrastructure/repositories/: generation.py
src/interfaces/api/: dependencies.py  routes.py
tests/: conftest.py  test_api.py  test_generate.py  test_generate_use_case.py  test_repository.py
