[tool.poetry]
name = "codegen-service"
version = "0.1.0"
description = "Async code generation service"
authors = ["Digital Passport Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
httpx = "^0.27.0"
openai = "^1.30.0"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
aiosqlite = "^0.19.0"
aiofiles = "^23.2.1"
python-dotenv = "^1.0.1"
uvicorn = {extras=["standard"], version="^0.29.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.2"
mypy = "^1.9.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
